# AFM_Nanofiber_Analyzer

./: .gitignore  .zenodo.json  01_setup_venv.bat  01_setup_venv.sh  02_run_from_venv.bat  02_run_from_venv.sh  11_setup_conda_env.bat  11_setup_conda_env.sh  12_run_from_conda_env.bat  12_run_from_conda_env.sh  91_setup_anaconda.bat  91_setup_anaconda.sh  92_run_from_anaconda.bat  92_run_from_anaconda.sh  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Main.py  README.ja.md  README.md  SUPPORT.md  TODO.md  build.py  buildold.py  check.py  cli.py  paper.bib  paper.md  prepare_translate_catalogs.py  pyproject.toml  requirements-ml.txt  requirements.lock.txt  requirements.txt  run_conda.bat  run_conda.sh  run_venv.bat  run_venv.sh
.githooks/: pre-commit  pre-push
.github/workflows/: docs.yml  test.yml
docs/: api.rst  conf.py  docstring-templates.md  docutils.conf  index.rst  installation-guide.ja.md  maintainer-notes.ja.md
guis/: GUI01_Image_Preprocessor.py  GUI02_PlotProfiler.py  GUI03_Fiber_Height_Histogram.py  GUI04_Tracking_fiber.py  GUI05_ML_Model_Trainer.py  GUI06_ML_Model_Compare.py  GUI07_ML_Connect_Annotator.py  GUI08_ML_Mask_Annotator.py
lib/: __init__.py  afm_io.py  bg_calibrator.py  bg_calibrator_shimadzu.py  blosc2_io.py  bundle_schema.py  fiber.py  fiber_connector.py  fiber_tracking_image.py  gwy_io.py  imp_tools.py  kink_detector.py  measure.py  ml_connect_dataset.py  ml_connect_features.py  ml_connect_labels.py  ml_dataset.py  ml_features.py  ml_mask_labels.py  ml_model.py  ml_schema.py  ml_train.py  pipeline.py  processed_image.py  segmenter.py  skeletonizer.py  translator.py  ui_tools.py
locale/: messages.pot
locale/Chinese/LC_MESSAGES/: messages.mo  messages.po
locale/English/LC_MESSAGES/: messages.mo  messages.po
locale/Japanese/LC_MESSAGES/: messages.mo  messages.po
scripts/: check_sensitive.py
testdata_artificial/: sample_anisotropic.txt  sample_isotropic.txt  scale_table_sample.csv
testdata_tunicateCNF/: sample_anisotropic.txt  scale_table_sample.csv  scale_table_xy_sample.csv
tests/: conftest.py  strict_regression_golden.json  test_afm_io.py  test_blosc2_io.py  test_bundle_schema.py  test_export.py  test_fiber_connector.py  test_gui_cli_equivalence.py  test_gui_smoke.py  test_gwy_io.py  test_integration.py  test_measure.py  test_ml_dataset_corrections.py  test_ml_mask_labels.py  test_params.py  test_pipeline.py  test_plugins.py  test_stage_preconditions.py  test_strict_regression.py  test_translations.py
