# Packaging metadata for AFM Nanofiber Analyzer.
#
# Scope: this configuration targets a development / editable install
# (`pip install -e .`) so the launcher, GUIs, CLI, and tests run from a
# checkout with declared dependencies. End-user distribution remains the
# PyInstaller bundle produced by build.py (see README). The historical
# top-level package names `lib` and `guis` are kept for compatibility with
# the launcher and frozen builds, so a non-editable site-packages install
# is not supported.
#
# 本設定は開発用の editable インストール（`pip install -e .`）を対象とする。
# エンドユーザー向け配布は従来どおり build.py が生成する PyInstaller
# バンドルである。トップレベルパッケージ名 `lib` / `guis` はランチャーと
# 凍結ビルドとの互換のため維持しており、site-packages への通常インストール
# は対象外。

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "afm-nanofiber-analyzer"
version = "1.0.0"
description = "GUI toolkit and CLI for preprocessing AFM height images and analyzing nanofiber morphology"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Shingo Kiyoto" },
    { name = "Keita Mayumi" },
    { name = "Tomoki Ito" },
    { name = "Kayoko Kobayashi" },
]
keywords = [
    "AFM",
    "atomic force microscopy",
    "nanofiber",
    "image analysis",
    "skeletonization",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
]
# Loose runtime requirements; the verified snapshot is requirements.lock.txt.
# 実行時依存の緩い指定。検証済みスナップショットは requirements.lock.txt。
dependencies = [
    "blosc2",
    "gwyfile",
    "lmfit",
    "matplotlib>=3.10",
    "numpy",
    "opencv-python",
    "pandas",
    "Pillow",
    "scikit-image",
    "scipy",
]

[project.optional-dependencies]
# Babel provides the pybabel CLI used by prepare_translate_catalogs.py and
# catalog compilation; it is a development tool, not a runtime dependency.
# pytest-xdist parallelizes the slow full-size regression tests across CPU
# cores (`pytest -n auto`), which is the main lever for shortening the strict
# regression suite; see [tool.pytest.ini_options] addopts.
dev = ["pytest", "pytest-xdist", "Babel", "ruff"]

[project.urls]
Repository = "https://github.com/q9-droid/AFM_Nanofiber_Analyzer"

[project.scripts]
afm-analyzer = "Main:main"
afm-analyzer-cli = "cli:main"

[tool.setuptools]
packages = ["lib", "guis"]
py-modules = ["Main", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Run tests in parallel across CPU cores via pytest-xdist. This roughly halves
# the wall time of the full suite, whose cost is dominated by the slow
# full-size regression tests (test_integration.py, test_strict_regression.py).
# All tests are isolated (per-test tmp_path / tempdir), so parallel execution
# is output-equivalent to serial. Override with `-n0` for serial runs, e.g.
# when debugging a single test and you want live, ordered output.
addopts = ["-n", "auto"]
markers = [
    "slow: integration tests that process full-size real scans",
]

[tool.ruff]
# Skip the local conda environment checked out beside the source tree; .venv
# and other VCS-ignored paths are excluded by Ruff's defaults.
extend-exclude = [".conda-env", ".tmp"]
target-version = "py310"

[tool.ruff.lint]
# Conservative, high-signal rule set: pyflakes (F) catches dead code, unused
# imports, and undefined names; E9 catches syntax errors. Stylistic rules
# (whitespace, line length) and import sorting are intentionally omitted to
# avoid reformat churn in this bilingual-comment codebase. Expand the set
# deliberately if a broader policy is wanted.
select = ["E9", "F"]
